made the loading particle effect animation responsive

--- a/css/loader.css
+++ b/css/loader.css
@@ -20,6 +20,20 @@
     animation-delay: 2.5s; /* Delay the fade-out by 3 seconds */
 }
 
+body, html {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden; /* Prevents scrollbars */
+  }
+  
+  #textparticle {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+
 @keyframes fadeOut {
     to {
         opacity: 0;
