--- a/style.css
+++ b/style.css
@@ -432,9 +432,9 @@ main { padding: 6rem 0rem;
   max-height: 100%;;
 }
 
-h1 {padding: 2rem 0rem;
+h1 {
+
   font-size: 2rem;
-  font-weight: 600;
 }
 
 h2 { padding-top: 2rem ;
