--- a/css/navbar.css
+++ b/css/navbar.css
@@ -11,7 +11,7 @@
     width: 200px; /* Adjust the width as needed */
     height: 80px; /* Adjust the height as needed */
     display: block;
-    margin: 10px;
+    margin: 0px 10px;
   }
   
   .header-content-mobile {
