--- a/css/career.css
+++ b/css/career.css
@@ -8,10 +8,11 @@ a{
     text-decoration: none;
 }
 
-ul{
-    list-style: none;
-
+ul {
+    list-style-position: inside; /* Moves marker inside the content flow */
+    padding-left: 0; /* Removes default padding */
 }
+
 
 body{
     margin: 0;
@@ -19,12 +20,279 @@ body{
     /* background-color: #1e6ddc; */
 }
 
+.job-openings-header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100px;
+    width: 100%;
+}
+
+.benefits-perks-header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100px;
+    width: 100%;
+}
+
+
+.benefits-perks-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: auto;
+    
+}
+
+.flex-col{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
+}
+
+.perks-div-header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+
+/* .perks-header{
+    font-size: 20px;
+    color: white;
+} */
+
+.main-header{
+    color: white;
+}
+
+.main-div{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: auto;
+    flex-direction: column;
+    background-color: rgba(255, 255, 255, 0.2); /* Light background color */
+    backdrop-filter: blur(10px);
+    padding: 20px;
+    animation: grow 1s forwards;
+    transform-origin: center;
+}
+
+
+.main-div-container{
+    display: flex;
+    width: 80%;
+    flex-direction: column;
+}
+.benefits-perks-div {
+    position: relative; /* Make this container the reference for absolute positioning */
+    width: 300px; /* Adjust as needed */
+    height: auto; /* Adjust as needed */
+    margin: 10px;
+    background-color: aqua;
+    overflow: hidden; /* Hide overflow content */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+.main-div-pointers-list{
+    color: white;
+}
+
+.main-div-pointers-para{
+    color : white
+}
+
+.benefits-perks-div-img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.benefits-perks-div-para {
+    position: absolute;
+    bottom: -100%; /* Start off-screen */
+    left: 0;
+    width: 100%;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.8); /* Optional: semi-transparent background */
+    transition: bottom 0.3s ease-in-out; /* Smooth transition for the position change */
+}
+
+.benefits-perks-div:hover .benefits-perks-div-para {
+    bottom: 0; /* Move the paragraph to be visible */
+
+}
+
+.benefits-perks-div:hover{
+    transform: scale(1.1);
+    transition: transform 0.3s ease-in-out;
+}
+
+
+.job-openings-div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.job-post-div {
+    width: 100%;
+    height: auto;
+    background-color: #07071d;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+
+.job-post-extended-div{
+    display: none;
+    flex-direction: column;
+    background-color: white;
+    
+}
+
+.job-post-extended-header-date{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 10px;
+    width: 100%;
+    height: auto;
+}
+
+.job-openings-row{
+    display: flex;
+    width: 80%;
+    height: auto;
+    flex-direction: column;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 4px 8px;
+    margin: 10px;
+    padding: 0px 5px;
+    border-radius: 10px;
+    animation: appear linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
+}
+
+
+.job-post-title{
+    color: #07071d;
+}
+
+.job-post-description{
+    color: #07071d;
+    width: 100%;
+    padding: 0px 10px;
+}
+
+.job-post-responsibilites{
+    display: flex;
+    flex-direction: column;
+    padding: 0px 10px;
+}
+
+
+
+.job-post-responsibilites-header{
+    color: #07071d;
+}
+
+.job-post-responsibilites-list-div{
+    display: flex;
+    flex-direction: column;
+    padding: 0px 10px;
+}
+
+.job-post-responsibilites-list{
+    color: #07071d;
+}
+
+.job-post-date{
+    color: #07071d;
+}
+
+.job-post-qualification{
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+
+.job-post-qualification-header{
+    color: #07071d;
+}
+
+.job-post-qualification-badge-div{
+    display: flex;
+    flex-direction: row;
+}
+
+.job-post-qualification-badge-subdiv{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    background-color: #07071d;
+    border-radius: 6px;
+    width: auto;
+    height: auto;
+    margin: 0px 5px;
+}
+
+.job-post-qualification-badge{
+    color: white;
+    padding: 5px;
+    width: 100%;
+    height: 100%;
+}
+
+
+.job-openings-row:hover {
+    transform: scale(1.1); 
+    transition: transform 0.3s ease-in-out; 
+}
+
+.job-post-extend {
+    display: flex;
+    font-size: 22px;
+    padding: 0 5px;
+    transition: transform 0.3s ease-in-out; /* Smooth transition for transform */
+    transform-origin: center; /* Optional: Ensures the rotation is centered */
+    color: white;
+}
+
+.job-post-extend:hover {
+    transform: rotate(45deg); /* Rotate the element on hover */
+}
+
+.job-post-para {
+    padding: 5px;
+    height: 100%; /* Make the paragraph take the full height of the parent */
+    display: flex; /* Optional: To center text within .job-post-para */
+    align-items: center; /* Center text vertically */
+    justify-content: center; /* Center text horizontally */
+    color: white;
+}
+
 #blog{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 40px;
     border-bottom: 1px solid rgba(0,0,0,0.05);
 }
 
@@ -52,8 +320,26 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 20px 0px;
     flex-wrap: wrap;
+    font-size: 20px;
+    color: #2b2b2b;
+}
+
+.sub-header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    padding: 0px 10px;
+}
+
+
+
+.sub-header-para{
+    font-size: 1.2rem;
+    color: white;
+    font-weight: 600;
 }
 
 .blog-box{
@@ -62,6 +348,9 @@ body{
     border: 1px solid #ececec;
     margin: 20px;
     border-radius: 5px;
+    animation: appearVertical linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
 }
 
 .blog-box:hover{
@@ -79,11 +368,12 @@ body{
     border-top-right-radius: 5px;
 }
 
+
 .blog-text{
     padding: 30px;
     display: flex;
     flex-direction: column;
-    background-color: #1e6ddc;
+    background-color: #07071d;
     color: #fff;
 }
 
@@ -136,6 +426,38 @@ body{
     z-index: 10;
 }
 
+@keyframes appear {
+    from {
+        opacity: 0;
+        transform: translateX(-100px);
+    } 
+    to{
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
+
+@keyframes grow {
+    0% {
+       transform: scale(0);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+
+@keyframes appearVertical {
+    from {
+        opacity: 0;
+        transform: translateY(-100px);
+    } 
+    to{
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
 
 @media (max-width: 1200px) {
     .blog-container {
@@ -148,6 +470,9 @@ body{
         width: 45%;
         margin: 1%;
     }
+    .benefits-perks-container{
+        flex-direction: column;
+    }
 }
 
 @media (max-width: 768px) {
@@ -159,6 +484,9 @@ body{
     .blog-img img {
         width: 100%;
         height: auto;
+    }
+    .benefits-perks-container{
+        flex-direction: column;
     }
 }
 
@@ -182,5 +510,8 @@ body{
     .btn {
         font-size: 1em;
         padding: 10px 20px;
+    }
+    .benefits-perks-container{
+        flex-direction: column;
     }
 }
